добавлены ручки админа на создание товара и получение товара, а также сваггер по ним
